# days_distributed_version_control_system

./: Cargo.toml  LICENSE  README.md
beta_tests/.dvcs/: HEAD
beta_tests/.dvcs/.metadata/: metadata.json
beta_tests/.remote/.dvcs/: HEAD
beta_tests/.remote/.dvcs/.metadata/: metadata.json
scripts/Unix/: cargo_commands.sh
scripts/Windows/: cargo_commands.ps1
src/: behavior_hiding.rs  lib.rs  main.rs  repository_hiding.rs  test.txt
src/a_1_file_system_hiding/: b_1_1_file_interaction.rs  b_1_2_directory_interaction.rs  b_1_3_metadata_management.rs  mod.rs
src/a_2_behavioral_hiding/: b_2_1_command_parser.rs  b_2_2_command_handler.rs  b_2_3_output_formatter.rs  command_parser.rs  mod.rs
src/a_3_repository_hiding/: b_3_1_repository_management.rs  b_3_2_revision_management.rs  b_3_3_branch_management.rs  b_3_4_synchronization_handler.rs  b_3_5_cross_revision_management.rs  b_3_5_repository_helper.rs  mod.rs
src/behavioral_hiding/: command_parser.rs  mod.rs
src/test_files/: README.md  program.rs
src/test_repo_1/.dvcs/commits/: commit_2db4f9d1-2824-4178-aead-820c22aaeb3b.txt  test.txt_3c5e8472-67e4-4c76-b739-a1c572f12e38.txt  test.txt_97811589-4950-448a-84ff-b523c1b5bbdd.txt  test_76f25aa0-c9cf-4798-890c-07d29fe16cb8.txt  (+1 more)
src/v0.1.0/: behavioral_hiding.rs  file_system_hiding.rs  main.rs  repository_hiding.rs
src/v0.2.0/src/: lib.rs
tests/: a_1_file_system_hiding_unit_test.rs  a_2_behavioral_hiding_unit_test.rs  a_3_repository_hiding_unit_test.rs  behavioral_hiding_test.rs
tests/acceptance/: acceptance.ps1  acceptance.sh
(+383 files in other folders)
